[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["Hao Nguyen <hao@haonguyen.tech>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
